tests/warn/poly-fun.jo
def bar[T](x: T): T = 3 // error
